fixes caption overflow in thumbnails

--- a/docs/css/home_tweak.css
+++ b/docs/css/home_tweak.css
@@ -58,8 +58,6 @@
   color: white;
   font-size: 120%;
   font-weight: 400;
-  padding-left: 15px;
-  padding-right: 15px;
   position: absolute;
   width: 270px;
   bottom: 10%;
