--- a/static/css/home_tweak.css
+++ b/static/css/home_tweak.css
@@ -48,20 +48,20 @@
 .gal-caption-box-2 {
   background-color: #22222288;
   position: absolute;
-  top: 65%;
+  padding-left: 15px;
+  padding-right: 15px;
+  top: 70%;
   left: 0;
   width: 100%;
-  height: 35%;
+  height: 30%;
 }
 
 .gal-caption-text-2 {
   color: white;
   font-size: 120%;
   font-weight: 400;
-  padding-left: 15px;
-  padding-right: 15px;
   position: absolute;
-  width: 270px;
+  width: 85%;
   bottom: 10%;
 }
 
